fixes alignment

--- a/src/components/report-header/report-header.scss
+++ b/src/components/report-header/report-header.scss
@@ -4,9 +4,9 @@ report-header {
         border-radius: 3px;
     }
     .report-header-text {
-        line-height: 2.5;
+        line-height: 3.5;
     }
     .data-item {
-        line-height: 1.5;
+        line-height: 2;
     }
 }
